--- a/practica2.ipynb
+++ b/practica2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dc6c9ca9",
+   "id": "87f7c0db",
    "metadata": {},
    "source": [
     "#### Ejercicio 7\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "07ab9cd3",
+   "id": "3b6d10f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2789fd81",
+   "id": "a367b9cc",
    "metadata": {},
    "source": [
     "La verificamos para la matriz ejemplo de las notas de \n",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "263be0c4",
+   "id": "de28fe6a",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01c0875c",
+   "id": "4caedd9a",
    "metadata": {},
    "source": [
     "En el caso de que no fuera posible obtener\n",
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "839aafe6",
+   "id": "fa1d45d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be204385",
+   "id": "4d8771f0",
    "metadata": {},
    "source": [
     "Para determinadas matrices se puede obtener un resultado\n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "86c66fb2",
+   "id": "ce636c28",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2deb648e",
+   "id": "e3f6dac9",
    "metadata": {},
    "source": [
     "Sin embargo, otras matrices nos obligan a una mayor \n",
@@ -155,8 +155,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "74ff9c18",
+   "execution_count": 50,
+   "id": "6197a9c8",
    "metadata": {},
    "outputs": [
     {
@@ -164,12 +164,12 @@
       "text/markdown": [
        "|Tamaño de muestra|$\\left\\|A\\right\\|_{\\infty}$|\n",
        "|:-:|:-:\n",
-       "|1|5.983606557377049|\n",
-       "|10|9.726315789473684|\n",
-       "|100|10.06060606060606|\n",
-       "|1000|10.642857142857142|\n",
-       "|10000|10.797979797979798|\n",
-       "|100000|10.979166666666666|\n"
+       "|1|8.592592592592592|\n",
+       "|10|9.80952380952381|\n",
+       "|100|10.693181818181818|\n",
+       "|1000|10.65979381443299|\n",
+       "|10000|10.813559322033898|\n",
+       "|100000|10.89873417721519|\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -183,10 +183,18 @@
     "from auxiliares import tabla\n",
     "tabla(\n",
     "    [10 ** x for x in range(6)],\n",
-    "    [\"Tamaño de muestra\", '$\\left\\|A\\\\right\\|_{\\infty}$'],\n",
+    "    [\"Tamaño de muestra\", \"$\\left\\|A\\\\right\\|_{\\infty}$\"],\n",
     "    [repr, lambda x: infnorm2([[1,2,3,5],[1,2,3,4]], x)]  \n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd8aa974",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
