Nueva prueba de latex en tablas

--- a/practica2.ipynb
+++ b/practica2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "87f7c0db",
+   "id": "cd671f11",
    "metadata": {},
    "source": [
     "#### Ejercicio 7\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3b6d10f4",
+   "id": "678c15d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a367b9cc",
+   "id": "6f52df95",
    "metadata": {},
    "source": [
     "La verificamos para la matriz ejemplo de las notas de \n",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "de28fe6a",
+   "id": "cadd3af8",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4caedd9a",
+   "id": "3f970367",
    "metadata": {},
    "source": [
     "En el caso de que no fuera posible obtener\n",
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "fa1d45d5",
+   "id": "83debb6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d8771f0",
+   "id": "cc920e0b",
    "metadata": {},
    "source": [
     "Para determinadas matrices se puede obtener un resultado\n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ce636c28",
+   "id": "55251f09",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3f6dac9",
+   "id": "d01daa0f",
    "metadata": {},
    "source": [
     "Sin embargo, otras matrices nos obligan a una mayor \n",
@@ -155,21 +155,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "6197a9c8",
+   "execution_count": 54,
+   "id": "b383a39d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "|Tamaño de muestra|$\\left\\|A\\right\\|_{\\infty}$|\n",
+       "|Tamaño de muestra|\\$\\left\\|A\\right\\|_{\\infty}\\$|\n",
        "|:-:|:-:\n",
-       "|1|8.592592592592592|\n",
-       "|10|9.80952380952381|\n",
-       "|100|10.693181818181818|\n",
-       "|1000|10.65979381443299|\n",
-       "|10000|10.813559322033898|\n",
-       "|100000|10.89873417721519|\n"
+       "|1|5.487500000000001|\n",
+       "|10|9.857142857142856|\n",
+       "|100|10.642857142857142|\n",
+       "|1000|10.585858585858585|\n",
+       "|10000|10.775510204081632|\n",
+       "|100000|10.977777777777778|\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -183,7 +183,7 @@
     "from auxiliares import tabla\n",
     "tabla(\n",
     "    [10 ** x for x in range(6)],\n",
-    "    [\"Tamaño de muestra\", \"$\\left\\|A\\\\right\\|_{\\infty}$\"],\n",
+    "    [\"Tamaño de muestra\", \"\\$\\left\\|A\\\\right\\|_{\\infty}\\$\"],\n",
     "    [repr, lambda x: infnorm2([[1,2,3,5],[1,2,3,4]], x)]  \n",
     ")"
    ]
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8aa974",
+   "id": "3a202593",
    "metadata": {},
    "outputs": [],
    "source": []
