Ultima prueba con latex

--- a/practica2.ipynb
+++ b/practica2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cd671f11",
+   "id": "e6204c94",
    "metadata": {},
    "source": [
     "#### Ejercicio 7\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "678c15d6",
+   "id": "dc695424",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f52df95",
+   "id": "0326125c",
    "metadata": {},
    "source": [
     "La verificamos para la matriz ejemplo de las notas de \n",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cadd3af8",
+   "id": "d498d15f",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f970367",
+   "id": "70b65567",
    "metadata": {},
    "source": [
     "En el caso de que no fuera posible obtener\n",
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "83debb6f",
+   "id": "a094105a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc920e0b",
+   "id": "926f9e57",
    "metadata": {},
    "source": [
     "Para determinadas matrices se puede obtener un resultado\n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "55251f09",
+   "id": "81d0ca0d",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d01daa0f",
+   "id": "1dac28e5",
    "metadata": {},
    "source": [
     "Sin embargo, otras matrices nos obligan a una mayor \n",
@@ -155,21 +155,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "b383a39d",
+   "execution_count": 58,
+   "id": "b67f81fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "|Tamaño de muestra|\\$\\left\\|A\\right\\|_{\\infty}\\$|\n",
+       "|Tamaño de muestra|$\\begin{Vmatrix}A\\end{Vmatrix}_{\\infty}$|\n",
        "|:-:|:-:\n",
-       "|1|5.487500000000001|\n",
-       "|10|9.857142857142856|\n",
-       "|100|10.642857142857142|\n",
-       "|1000|10.585858585858585|\n",
-       "|10000|10.775510204081632|\n",
-       "|100000|10.977777777777778|\n"
+       "|1|7.516129032258064|\n",
+       "|10|8.824175824175823|\n",
+       "|100|10.206521739130434|\n",
+       "|1000|10.563218390804597|\n",
+       "|10000|10.872093023255815|\n",
+       "|100000|10.947368421052632|\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -183,7 +183,7 @@
     "from auxiliares import tabla\n",
     "tabla(\n",
     "    [10 ** x for x in range(6)],\n",
-    "    [\"Tamaño de muestra\", \"\\$\\left\\|A\\\\right\\|_{\\infty}\\$\"],\n",
+    "    [\"Tamaño de muestra\", \"$\\\\begin{Vmatrix}A\\end{Vmatrix}_{\\infty}$\"],\n",
     "    [repr, lambda x: infnorm2([[1,2,3,5],[1,2,3,4]], x)]  \n",
     ")"
    ]
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a202593",
+   "id": "50321a37",
    "metadata": {},
    "outputs": [],
    "source": []
