--- a/practica2.ipynb
+++ b/practica2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e6204c94",
+   "id": "df52e042",
    "metadata": {},
    "source": [
     "#### Ejercicio 7\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dc695424",
+   "id": "1fc524b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0326125c",
+   "id": "87616bd4",
    "metadata": {},
    "source": [
     "La verificamos para la matriz ejemplo de las notas de \n",
@@ -56,8 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d498d15f",
+   "execution_count": 2,
+   "id": "0590485b",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70b65567",
+   "id": "7d6f1e27",
    "metadata": {},
    "source": [
     "En el caso de que no fuera posible obtener\n",
@@ -91,25 +91,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "a094105a",
+   "execution_count": 3,
+   "id": "935d8bfb",
    "metadata": {},
    "outputs": [],
    "source": [
     "from random import randint\n",
     "from numpy import matmul\n",
     "def infnorm2(matrix, sample_size):\n",
-    "    def vecnorm(vector):\n",
-    "        return [elem / max(vector) for elem in vector]\n",
     "    def infnormvec(vector):\n",
     "        return max(abs(elem) for elem in vector)\n",
-    "    vectors = [[randint(1, 100) for _ in range(len(matrix[0]))] for _ in range(sample_size)]\n",
+    "    def vecnorm(vector):\n",
+    "        return [elem / infnormvec(vector) for elem in vector]\n",
+    "    vectors = ([randint(-100, 100) for _ in range(len(matrix[0]))] for _ in range(sample_size))\n",
     "    return max(infnormvec(matmul(matrix, vecnorm(vector))) for vector in vectors)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "926f9e57",
+   "id": "8e528cdc",
    "metadata": {},
    "source": [
     "Para determinadas matrices se puede obtener un resultado\n",
@@ -119,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "81d0ca0d",
+   "execution_count": 4,
+   "id": "442a2248",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "3.0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dac28e5",
+   "id": "e6a4c74a",
    "metadata": {},
    "source": [
     "Sin embargo, otras matrices nos obligan a una mayor \n",
@@ -155,8 +155,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "b67f81fd",
+   "execution_count": 5,
+   "id": "4e0f338e",
    "metadata": {},
    "outputs": [
     {
@@ -164,12 +164,12 @@
       "text/markdown": [
        "|Tamaño de muestra|$\\begin{Vmatrix}A\\end{Vmatrix}_{\\infty}$|\n",
        "|:-:|:-:\n",
-       "|1|7.516129032258064|\n",
-       "|10|8.824175824175823|\n",
-       "|100|10.206521739130434|\n",
-       "|1000|10.563218390804597|\n",
-       "|10000|10.872093023255815|\n",
-       "|100000|10.947368421052632|\n"
+       "|1|1.9878048780487805|\n",
+       "|10|7.46969696969697|\n",
+       "|100|7.703703703703704|\n",
+       "|1000|7.786516853932584|\n",
+       "|10000|7.9714285714285715|\n",
+       "|100000|8.0|\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -184,14 +184,160 @@
     "tabla(\n",
     "    [10 ** x for x in range(6)],\n",
     "    [\"Tamaño de muestra\", \"$\\\\begin{Vmatrix}A\\end{Vmatrix}_{\\infty}$\"],\n",
-    "    [repr, lambda x: infnorm2([[1,2,3,5],[1,2,3,4]], x)]  \n",
+    "    [repr, lambda x: infnorm2([[1,-2,5],[1,2,4]], x)]  \n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "339b3cf8",
+   "metadata": {},
+   "source": [
+    "#### Ejercicio 11\n",
+    "\n",
+    "Escribir un código para resolver el sistema matricial $Ax = b$ donde $A$ es una matriz que es una\n",
+    "permutación de una matríz triangular superior.\n",
+    "\n",
+    "##### Solución\n",
+    "\n",
+    "Asumiendo que la matríz $A$ es una permutación de una matriz triangular\n",
+    "superior, aplicamos el algoritmo de resolución de una tal matriz para \n",
+    "un vector de valores independientes, siguiendo un ordenamiento dado \n",
+    "por un vector de permutaciones.\n",
+    "En caso que dicho vector de permutaciones no sea proveído, lo calculamos.\n",
+    "Dada la similitud de los algoritmos, agregamos un parámetro que indica\n",
+    "si la matriz es triangular superior o inferior. Así, la implementación \n",
+    "de la función `solvetrian` resulta:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6af549cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import takewhile\n",
+    "from functools import reduce\n",
+    "\n",
+    "\n",
+    "def solvetrian(matrix, values, perm=None, lower=False):\n",
+    "    n = len(matrix)\n",
+    "    ind = range(n)\n",
+    "    if not perm:\n",
+    "        keys = [\n",
+    "            reduce(\n",
+    "                lambda s, i: s + 1,\n",
+    "                takewhile(lambda x: x == 0 ^ lower, row),\n",
+    "                0,\n",
+    "            )\n",
+    "            for row in matrix\n",
+    "        ]\n",
+    "        perm = sorted(ind, key=(lambda x: keys[x]))\n",
+    "    return reduce(\n",
+    "        lambda r, i: [\n",
+    "            (\n",
+    "                values[perm[i]]\n",
+    "                - matmul(\n",
+    "                    matrix[perm[i]][\n",
+    "                        slice(i) if lower else slice(i + 1, n)\n",
+    "                    ],\n",
+    "                    r,\n",
+    "                )\n",
+    "            )\n",
+    "            / matrix[perm[i]][i]\n",
+    "        ]\n",
+    "        + r,\n",
+    "        ind if lower else reversed(ind),\n",
+    "        [],\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "145450ef",
+   "metadata": {},
+   "source": [
+    "Verifiquemos la función con el siguiente sistema:\n",
+    "\n",
+    "$$\\left(\\begin{matrix} 1 & 2 & 3 \\\\ 0 & 5 & 4 \\\\ 0 & 0 & 6 \\end{matrix}\\right) \\cdot \\left(\\begin{matrix} x_1 \\\\ x_2 \\\\ x_3 \\end{matrix}\\right) = \\left(\\begin{matrix} 7 \\\\ 8 \\\\ 9 \\end{matrix}\\right)$$\n",
+    "\n",
+    "En código:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e6b23eb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.7000000000000002, 0.4, 1.5]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = [[1,2,3],\n",
+    "     [0,5,4],\n",
+    "     [0,0,6]]\n",
+    "b = [7,8,9]\n",
+    "solvetrian(A, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea1a4663",
+   "metadata": {},
+   "source": [
+    "Si nuestra solución es correcta se debe verificar que $A \\cdot x = b$. \n",
+    "Veamoslo en código:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a2d2fa10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7., 8., 9.])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matmul(A, solvetrian(A, b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d02ccfde",
+   "metadata": {},
+   "source": [
+    "#### Ejercicio 14\n",
+    "\n",
+    "Usar el proceso de eliminación de Gauss Escalado para encontrar la descomposición $P \\cdot A = L \\cdot U$ (comparar con Python) y resolver en cada uno de los casos.\n",
+    "\n",
+    "$$\\left(\\begin{matrix} -1 & 1 & -4 \\\\ 2 & 2 & 0 \\\\ 3 & 3 & 2 \\end{matrix}\\right) \\cdot \\left(\\begin{matrix} x_1 \\\\ x_2 \\\\ x_3 \\end{matrix}\\right) = \\left(\\begin{matrix} 0 \\\\ 1 \\\\ \\frac{1}{2} \\end{matrix}\\right)$$\n",
+    "\n",
+    "$$\\left(\\begin{matrix} 1 & 6 & 0 \\\\ 2 & 1 & 0 \\\\ 0 & 2 & 1 \\end{matrix}\\right) \\cdot \\left(\\begin{matrix} x_1 \\\\ x_2 \\\\ x_3 \\end{matrix}\\right) = \\left(\\begin{matrix} 3 \\\\ 1 \\\\ 1 \\end{matrix}\\right)$$\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50321a37",
+   "id": "ced2ab89",
    "metadata": {},
    "outputs": [],
    "source": []
