Detalles de formato y titulo

--- a/practica2.ipynb
+++ b/practica2.ipynb
@@ -268,7 +268,13 @@
    "source": [
     "Verifiquemos la función con el siguiente sistema:\n",
     "\n",
-    "$$\\left(\\begin{matrix} 1 & 2 & 3 \\\\ 0 & 5 & 4 \\\\ 0 & 0 & 6 \\end{matrix}\\right) \\times \\left(\\begin{matrix} x_1 \\\\ x_2 \\\\ x_3 \\end{matrix}\\right) = \\left(\\begin{matrix} 7 \\\\ 8 \\\\ 9 \\end{matrix}\\right)$$\n",
+    "$$\n",
+    "    \\left(\\begin{matrix} 1 & 2 & 3 \\\\ 0 & 5 & 4 \\\\ 0 & 0 & 6 \\end{matrix}\\right) \n",
+    "    \\times \n",
+    "    \\left(\\begin{matrix} x_1 \\\\ x_2 \\\\ x_3 \\end{matrix}\\right)\n",
+    "    = \n",
+    "    \\left(\\begin{matrix} 7 \\\\ 8 \\\\ 9 \\end{matrix}\\right)\n",
+    "$$\n",
     "\n",
     "En código:"
    ]
@@ -333,9 +339,21 @@
     "\n",
     "Usar el proceso de eliminación de Gauss Escalado para encontrar la descomposición $P \\cdot A = L \\cdot U$ (comparar con Python) y resolver en cada uno de los casos.\n",
     "\n",
-    "$$\\left(\\begin{matrix} -1 & 1 & -4 \\\\ 2 & 2 & 0 \\\\ 3 & 3 & 2 \\end{matrix}\\right) \\times \\left(\\begin{matrix} x_1 \\\\ x_2 \\\\ x_3 \\end{matrix}\\right) = \\left(\\begin{matrix} 0 \\\\ 1 \\\\ \\frac{1}{2} \\end{matrix}\\right)$$\n",
+    "$$\n",
+    "    \\left(\\begin{matrix} -1 & 1 & -4 \\\\ 2 & 2 & 0 \\\\ 3 & 3 & 2 \\end{matrix}\\right) \n",
+    "    \\times \n",
+    "    \\left(\\begin{matrix} x_1 \\\\ x_2 \\\\ x_3 \\end{matrix}\\right)\n",
+    "    = \n",
+    "    \\left(\\begin{matrix} 0 \\\\ 1 \\\\ 1/2 \\end{matrix}\\right)\n",
+    "$$\n",
     "\n",
-    "$$\\left(\\begin{matrix} 1 & 6 & 0 \\\\ 2 & 1 & 0 \\\\ 0 & 2 & 1 \\end{matrix}\\right) \\times \\left(\\begin{matrix} x_1 \\\\ x_2 \\\\ x_3 \\end{matrix}\\right) = \\left(\\begin{matrix} 3 \\\\ 1 \\\\ 1 \\end{matrix}\\right)$$\n",
+    "$$\n",
+    "    \\left(\\begin{matrix} 1 & 6 & 0 \\\\ 2 & 1 & 0 \\\\ 0 & 2 & 1 \\end{matrix}\\right) \n",
+    "    \\times \n",
+    "    \\left(\\begin{matrix} x_1 \\\\ x_2 \\\\ x_3 \\end{matrix}\\right)\n",
+    "    = \n",
+    "    \\left(\\begin{matrix} 3 \\\\ 1 \\\\ 1 \\end{matrix}\\right)\n",
+    "$$\n",
     "\n",
     "##### Solución\n",
     "\n",
@@ -466,7 +484,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "hide_input": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -619,7 +639,13 @@
     "en espejo al utilizado al verificar el \n",
     "algoritmo para solucionar la matriz triangular superior:\n",
     "\n",
-    "$$\\left(\\begin{matrix} 6 & 0 & 0 \\\\ 4 & 5 & 0 \\\\ 3 & 2 & 1 \\end{matrix}\\right) \\times \\left(\\begin{matrix} x_1 \\\\ x_2 \\\\ x_3 \\end{matrix}\\right) = \\left(\\begin{matrix} 9 \\\\ 8 \\\\ 7 \\end{matrix}\\right)$$\n",
+    "$$\n",
+    "    \\left(\\begin{matrix} 6 & 0 & 0 \\\\ 4 & 5 & 0 \\\\ 3 & 2 & 1 \\end{matrix}\\right) \n",
+    "    \\times \n",
+    "    \\left(\\begin{matrix} x_1 \\\\ x_2 \\\\ x_3 \\end{matrix}\\right)\n",
+    "    = \n",
+    "    \\left(\\begin{matrix} 9 \\\\ 8 \\\\ 7 \\end{matrix}\\right)\n",
+    "$$\n",
     "\n",
     "En código:"
    ]
@@ -1001,7 +1027,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "hide_input": true
+   },
    "outputs": [
     {
      "data": {
@@ -1271,7 +1299,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "hide_input": true
+   },
    "outputs": [
     {
      "data": {
