Sacar latex de tablas largas

--- a/practica2.ipynb
+++ b/practica2.ipynb
@@ -7,7 +7,7 @@
     "#### Ejercicio 7\n",
     "\n",
     "Escribir un código para estimar la norma infinito de una matriz, usar la fórmula cerrada. Cómo\n",
-    "serı́a un código si no tenemos una fórmula cerrada? Comparar.\n",
+    "sería un código si no tenemos una fórmula cerrada? Comparar.\n",
     "\n",
     "##### Solución\n",
     "\n",
@@ -178,11 +178,11 @@
       "text/markdown": [
        "|Tamaño de muestra|$\\begin{Vmatrix}A\\end{Vmatrix}_{\\infty}$|\n",
        "|:-:|:-:\n",
-       "|1|4.602409638554217|\n",
-       "|10|6.962025316455696|\n",
-       "|100|7.73015873015873|\n",
-       "|1000|7.958762886597938|\n",
-       "|10000|7.91358024691358|\n",
+       "|1|7.0|\n",
+       "|10|6.460526315789474|\n",
+       "|100|7.941860465116279|\n",
+       "|1000|7.8196721311475414|\n",
+       "|10000|7.930555555555555|\n",
        "|100000|8.0|\n"
       ],
       "text/plain": [
@@ -200,7 +200,7 @@
     "    [10 ** x for x in range(6)],\n",
     "    [\n",
     "        \"Tamaño de muestra\",\n",
-    "        \"$\\\\begin{Vmatrix}A\\end{Vmatrix}_{\\infty}$\",\n",
+    "        \"$\\\\begin{Vmatrix}A\\\\end{Vmatrix}_{\\\\infty}$\",\n",
     "    ],\n",
     "    [\n",
     "        repr,\n",
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {
     "hide_input": true
    },
@@ -1034,28 +1034,41 @@
     {
      "data": {
       "text/markdown": [
-       "|||Richardson $x_n$|||\n",
-       "|:-:|:-:|:-:|:-:|:-:\n",
-       "|[0.611, 0.611, 0.611]|[0.102, 0.102, 0.102]|[0.526, 0.526, 0.526]|[0.173, 0.173, 0.173]|[0.467, 0.467, 0.467]|\n",
-       "|[0.102, 0.102, 0.102]|[0.526, 0.526, 0.526]|[0.173, 0.173, 0.173]|[0.467, 0.467, 0.467]|[0.222, 0.222, 0.222]|\n",
-       "|[0.526, 0.526, 0.526]|[0.173, 0.173, 0.173]|[0.467, 0.467, 0.467]|[0.222, 0.222, 0.222]|[0.426, 0.426, 0.426]|\n",
-       "|[0.173, 0.173, 0.173]|[0.467, 0.467, 0.467]|[0.222, 0.222, 0.222]|[0.426, 0.426, 0.426]|[0.256, 0.256, 0.256]|\n",
-       "|[0.467, 0.467, 0.467]|[0.222, 0.222, 0.222]|[0.426, 0.426, 0.426]|[0.256, 0.256, 0.256]|[0.398, 0.398, 0.398]|\n",
-       "|[0.222, 0.222, 0.222]|[0.426, 0.426, 0.426]|[0.256, 0.256, 0.256]|[0.398, 0.398, 0.398]|[0.279, 0.279, 0.279]|\n",
-       "|[0.426, 0.426, 0.426]|[0.256, 0.256, 0.256]|[0.398, 0.398, 0.398]|[0.279, 0.279, 0.279]|[0.378, 0.378, 0.378]|\n",
-       "|[0.256, 0.256, 0.256]|[0.398, 0.398, 0.398]|[0.279, 0.279, 0.279]|[0.378, 0.378, 0.378]|[0.296, 0.296, 0.296]|\n",
-       "|[0.398, 0.398, 0.398]|[0.279, 0.279, 0.279]|[0.378, 0.378, 0.378]|[0.296, 0.296, 0.296]|[0.364, 0.364, 0.364]|\n",
-       "|[0.279, 0.279, 0.279]|[0.378, 0.378, 0.378]|[0.296, 0.296, 0.296]|[0.364, 0.364, 0.364]|[0.307, 0.307, 0.307]|\n",
-       "|[0.378, 0.378, 0.378]|[0.296, 0.296, 0.296]|[0.364, 0.364, 0.364]|[0.307, 0.307, 0.307]|[0.355, 0.355, 0.355]|\n",
-       "|[0.296, 0.296, 0.296]|[0.364, 0.364, 0.364]|[0.307, 0.307, 0.307]|[0.355, 0.355, 0.355]|[0.315, 0.315, 0.315]|\n",
-       "|[0.364, 0.364, 0.364]|[0.307, 0.307, 0.307]|[0.355, 0.355, 0.355]|[0.315, 0.315, 0.315]|[0.348, 0.348, 0.348]|\n",
-       "|[0.307, 0.307, 0.307]|[0.355, 0.355, 0.355]|[0.315, 0.315, 0.315]|[0.348, 0.348, 0.348]|[0.321, 0.321, 0.321]|\n",
-       "|[0.355, 0.355, 0.355]|[0.315, 0.315, 0.315]|[0.348, 0.348, 0.348]|[0.321, 0.321, 0.321]|[0.344, 0.344, 0.344]|\n",
-       "|[0.315, 0.315, 0.315]|[0.348, 0.348, 0.348]|[0.321, 0.321, 0.321]|[0.344, 0.344, 0.344]|[0.325, 0.325, 0.325]|\n",
-       "|[0.348, 0.348, 0.348]|[0.321, 0.321, 0.321]|[0.344, 0.344, 0.344]|[0.325, 0.325, 0.325]|[0.341, 0.341, 0.341]|\n",
-       "|[0.321, 0.321, 0.321]|[0.344, 0.344, 0.344]|[0.325, 0.325, 0.325]|[0.341, 0.341, 0.341]|[0.327, 0.327, 0.327]|\n",
-       "|[0.344, 0.344, 0.344]|[0.325, 0.325, 0.325]|[0.341, 0.341, 0.341]|[0.327, 0.327, 0.327]|[0.338, 0.338, 0.338]|\n",
-       "|[0.325, 0.325, 0.325]|[0.341, 0.341, 0.341]|[0.327, 0.327, 0.327]|[0.338, 0.338, 0.338]|[0.329, 0.329, 0.329]|\n"
+       "||Richardson xn||\n",
+       "|:-:|:-:|:-:\n",
+       "|[0.611, 0.611, 0.611]|[0.102, 0.102, 0.102]|[0.526, 0.526, 0.526]|\n",
+       "|[0.102, 0.102, 0.102]|[0.526, 0.526, 0.526]|[0.173, 0.173, 0.173]|\n",
+       "|[0.526, 0.526, 0.526]|[0.173, 0.173, 0.173]|[0.467, 0.467, 0.467]|\n",
+       "|[0.173, 0.173, 0.173]|[0.467, 0.467, 0.467]|[0.222, 0.222, 0.222]|\n",
+       "|[0.467, 0.467, 0.467]|[0.222, 0.222, 0.222]|[0.426, 0.426, 0.426]|\n",
+       "|[0.222, 0.222, 0.222]|[0.426, 0.426, 0.426]|[0.256, 0.256, 0.256]|\n",
+       "|[0.426, 0.426, 0.426]|[0.256, 0.256, 0.256]|[0.398, 0.398, 0.398]|\n",
+       "|[0.256, 0.256, 0.256]|[0.398, 0.398, 0.398]|[0.279, 0.279, 0.279]|\n",
+       "|[0.398, 0.398, 0.398]|[0.279, 0.279, 0.279]|[0.378, 0.378, 0.378]|\n",
+       "|[0.279, 0.279, 0.279]|[0.378, 0.378, 0.378]|[0.296, 0.296, 0.296]|\n",
+       "|[0.378, 0.378, 0.378]|[0.296, 0.296, 0.296]|[0.364, 0.364, 0.364]|\n",
+       "|[0.296, 0.296, 0.296]|[0.364, 0.364, 0.364]|[0.307, 0.307, 0.307]|\n",
+       "|[0.364, 0.364, 0.364]|[0.307, 0.307, 0.307]|[0.355, 0.355, 0.355]|\n",
+       "|[0.307, 0.307, 0.307]|[0.355, 0.355, 0.355]|[0.315, 0.315, 0.315]|\n",
+       "|[0.355, 0.355, 0.355]|[0.315, 0.315, 0.315]|[0.348, 0.348, 0.348]|\n",
+       "|[0.315, 0.315, 0.315]|[0.348, 0.348, 0.348]|[0.321, 0.321, 0.321]|\n",
+       "|[0.348, 0.348, 0.348]|[0.321, 0.321, 0.321]|[0.344, 0.344, 0.344]|\n",
+       "|[0.321, 0.321, 0.321]|[0.344, 0.344, 0.344]|[0.325, 0.325, 0.325]|\n",
+       "|[0.344, 0.344, 0.344]|[0.325, 0.325, 0.325]|[0.341, 0.341, 0.341]|\n",
+       "|[0.325, 0.325, 0.325]|[0.341, 0.341, 0.341]|[0.327, 0.327, 0.327]|\n",
+       "|[0.341, 0.341, 0.341]|[0.327, 0.327, 0.327]|[0.338, 0.338, 0.338]|\n",
+       "|[0.327, 0.327, 0.327]|[0.338, 0.338, 0.338]|[0.329, 0.329, 0.329]|\n",
+       "|[0.338, 0.338, 0.338]|[0.329, 0.329, 0.329]|[0.337, 0.337, 0.337]|\n",
+       "|[0.329, 0.329, 0.329]|[0.337, 0.337, 0.337]|[0.330, 0.330, 0.330]|\n",
+       "|[0.337, 0.337, 0.337]|[0.330, 0.330, 0.330]|[0.336, 0.336, 0.336]|\n",
+       "|[0.330, 0.330, 0.330]|[0.336, 0.336, 0.336]|[0.331, 0.331, 0.331]|\n",
+       "|[0.336, 0.336, 0.336]|[0.331, 0.331, 0.331]|[0.335, 0.335, 0.335]|\n",
+       "|[0.331, 0.331, 0.331]|[0.335, 0.335, 0.335]|[0.332, 0.332, 0.332]|\n",
+       "|[0.335, 0.335, 0.335]|[0.332, 0.332, 0.332]|[0.335, 0.335, 0.335]|\n",
+       "|[0.332, 0.332, 0.332]|[0.335, 0.335, 0.335]|[0.332, 0.332, 0.332]|\n",
+       "|[0.335, 0.335, 0.335]|[0.332, 0.332, 0.332]|[0.334, 0.334, 0.334]|\n",
+       "|[0.332, 0.332, 0.332]|[0.334, 0.334, 0.334]|[0.333, 0.333, 0.333]|\n",
+       "|[0.334, 0.334, 0.334]|[0.333, 0.333, 0.333]|[0.334, 0.334, 0.334]|\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1067,8 +1080,8 @@
    ],
    "source": [
     "tabla(\n",
-    "    [map(format_vec, r[i:i + 5]) for i in range(len(r) // 5)],\n",
-    "    [\"\",\"\",\"Richardson $x_n$\",\"\",\"\"]\n",
+    "    [map(format_vec, r[i:i + 3]) for i in range(len(r) // 3)],\n",
+    "    [\"\", \"Richardson xn\",\"\"]\n",
     ")"
    ]
   },
@@ -1207,7 +1220,7 @@
     "#### Ejercicio 17\n",
     "\n",
     "Para el siguiente sistema mostrar que tanto Gauss-Seidel como Jacobi convergen para cualquier valor\n",
-    "inicial. Usar el ı́tem anterior para estimar la solución.\n",
+    "inicial. Usar el ítem anterior para estimar la solución.\n",
     "\n",
     "$$\n",
     "    \\left(\\begin{matrix} 2 & -1 & 0 \\\\ 1 & 6 & -2 \\\\ 4 & -3 & 8 \\end{matrix}\\right) \n",
@@ -1298,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {
     "hide_input": true
    },
